# dingOS

./: .bashrc  .clang-format  .gitignore  LICENSE  Makefile  README.md  createFilesForSDtests.py  debug.sh  gdb-debug-script.gdb  gdb-init-script.gdb  gdb_qemu_debug.sh  run_debug.sh  run_until_unexpected.sh  test-debug.sh  test.dd  test.py
assets/: doom1.wad
fs_root/: README.txt  assemble.sh  hello.elf  hello.txt
fs_root/syscall_test/: syscall_test.elf  syscall_test.ld  syscall_test.s
kernel/: Makefile  kernel.cc  linker.ld
kernel/doom/: dg_platform.c  dg_platform.cpp  dg_platform.h  toolchain.cmake
kernel/doom/doomgeneric/: CMakeLists.txt
kernel/include/: arm_timer.h  atomic.h  atomics.h  barrier.h  bfs.h  bfsTests.h  block_io.h  channel.h  cores.h  crti.h  debug.h  definitions.h  devices.h  e1000_driver.h  elf.h  elfTests.h  eventTests.h  event_loop.h  ext2.h  ext2Tests.h  framebuffer.h  future.h  gpio.h  hashmap.h  hashmapTests.h  heap.h  heapTests.h  in_memory_fs.h  interrupts.h  ioresource.h  ipc.h  ipc_tests.h  journal.h  keyboard.h  lan9118_driver.h  local_timer.h  machine.h  message.h  message_queue.h  network_test.h  (+21 more)
kernel/src/: arm_timer.cpp  atomics.c  atomics.s  atomics_tests.c  atomics_tests.cpp  atomicss.s  bfs.cpp  block_io.cpp  boot.s  context_switch.s  cores.cpp  crti.cpp  crtn.cpp  debug.cpp  devices.cpp  e1000_driver.cpp  elf.cpp  event_loop.c  event_loop.cpp  ext2.cpp  framebuffer.cpp  gpio.cpp  hashmap.cpp  heap.cpp  heap.h  heap2.cpp  in_memory_fs.cpp  (+33 more)
userspace/: build.sh  crt-stubs.c  crt0.S  hello.c  hello.elf  hello.ld  syscalls.c
(+4 files in other folders)
